// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`await import() should receive a thennable without calling .then 1`] = `
"
async ({ page }) => await import(\`../components/\${page}\`);

      ↓ ↓ ↓ ↓ ↓ ↓

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

async ({
  page
}) => await _universalImport(() => Promise.all([import(
/* webpackChunkName: 'components/[request]' */
\`../components/\${page}\`), _importCss(\`components/\${page}\`, {})]).then(proms => proms[0]), false);
"
`;

exports[`babelServer: true 1`] = `
"
import(\\"./Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"./Foo\\",
  file: \\"currentFile.js\\",
  path: () => _path.join(__dirname, \\"./Foo\\"),
  resolve: () => require.resolveWeak(\\"./Foo\\"),
  chunkName: () => \\"Foo\\"
});
"
`;

exports[`disableWarnings: true 1`] = `
"
import(\\"./Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"./Foo\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Foo' */
  \\"./Foo\\"), _importCss(\\"Foo\\", {
    disableWarnings: true
  })]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \\"./Foo\\"),
  resolve: () => require.resolveWeak(\\"./Foo\\"),
  chunkName: () => \\"Foo\\"
});
"
`;

exports[`dynamic import (string template + relative paths) 1`] = `
"
import(\`../../base/\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"../../base/\${page}\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'base/[request]' */
  \`../../base/\${page}\`), _importCss(\`base/\${page}\`, {})]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \`../../base/\${page}\`),
  resolve: () => require.resolveWeak(\`../../base/\${page}\`),
  chunkName: () => \`base/\${page}\`
});
"
`;

exports[`dynamic import (string template - dynamic at 1st segment) 1`] = `
"
import(\`./\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"./\${page}\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: '[request]' */
  \`./\${page}\`), _importCss(\`\${page}\`, {})]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \`./\${page}\`),
  resolve: () => require.resolveWeak(\`./\${page}\`),
  chunkName: () => \`\${page}\`
});
"
`;

exports[`dynamic import (string template with multiple nested folders) 1`] = `
"
import(\`./base/\${page}/nested/{$another}folder\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"./base/\${page}/nested/{$another}folder\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'base/[request]' */
  \`./base/\${page}/nested/{$another}folder\`), _importCss(\`base/\${page}-nested-{$another}folder\`, {})]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \`./base/\${page}/nested/{$another}folder\`),
  resolve: () => require.resolveWeak(\`./base/\${page}/nested/{$another}folder\`),
  chunkName: () => \`base/\${page}-nested-{$another}folder\`
});
"
`;

exports[`dynamic import (string template with nested folder) 1`] = `
"
import(\`./base/\${page}/nested/folder\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"./base/\${page}/nested/folder\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'base/[request]' */
  \`./base/\${page}/nested/folder\`), _importCss(\`base/\${page}-nested-folder\`, {})]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \`./base/\${page}/nested/folder\`),
  resolve: () => require.resolveWeak(\`./base/\${page}/nested/folder\`),
  chunkName: () => \`base/\${page}-nested-folder\`
});
"
`;

exports[`dynamic import (string template) 1`] = `
"
import(\`./base/\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"./base/\${page}\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'base/[request]' */
  \`./base/\${page}\`), _importCss(\`base/\${page}\`, {})]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \`./base/\${page}\`),
  resolve: () => require.resolveWeak(\`./base/\${page}\`),
  chunkName: () => \`base/\${page}\`
});
"
`;

exports[`existing chunkName 1`] = `
"
import(/* webpackChunkName: 'Bar' */\\"./Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"./Foo\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Bar' */
  \\"./Foo\\"), _importCss(\\"Bar\\", {})]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \\"./Foo\\"),
  resolve: () => require.resolveWeak(\\"./Foo\\"),
  chunkName: () => \\"Bar\\"
});
"
`;

exports[`static import (import as function with relative paths + nested folder) 1`] = `
"
const obj = {component:()=>import(\`../components/nestedComponent\`)}; ()=> obj.component()

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

const obj = {
  component: () => _universalImport({
    id: \\"../components/nestedComponent\\",
    file: \\"currentFile.js\\",
    load: () => Promise.all([import(
    /* webpackChunkName: 'components-nestedComponent' */
    \`../components/nestedComponent\`), _importCss(\\"components-nestedComponent\\", {})]).then(proms => proms[0]),
    path: () => _path.join(__dirname, \`../components/nestedComponent\`),
    resolve: () => require.resolveWeak(\`../components/nestedComponent\`),
    chunkName: () => \\"components-nestedComponent\\"
  })
};

() => obj.component();
"
`;

exports[`static import (relative paths + nested folder) 1`] = `
"
import(\`../components/nestedComponent\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"../components/nestedComponent\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'components-nestedComponent' */
  \`../components/nestedComponent\`), _importCss(\\"components-nestedComponent\\", {})]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \`../components/nestedComponent\`),
  resolve: () => require.resolveWeak(\`../components/nestedComponent\`),
  chunkName: () => \\"components-nestedComponent\\"
});
"
`;

exports[`static import (string template + relative paths) 1`] = `
"
import(\`../../base\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"../../base\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'base' */
  \`../../base\`), _importCss(\`base\`, {})]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \`../../base\`),
  resolve: () => require.resolveWeak(\`../../base\`),
  chunkName: () => \`base\`
});
"
`;

exports[`static import (string template) 1`] = `
"
import(\`./base\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"./base\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'base' */
  \`./base\`), _importCss(\`base\`, {})]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \`./base\`),
  resolve: () => require.resolveWeak(\`./base\`),
  chunkName: () => \`base\`
});
"
`;

exports[`static import (with file extension) 1`] = `
"
import(\\"./Foo.js\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"./Foo.js\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Foo' */
  \\"./Foo.js\\"), _importCss(\\"Foo\\", {})]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \\"./Foo.js\\"),
  resolve: () => require.resolveWeak(\\"./Foo.js\\"),
  chunkName: () => \\"Foo\\"
});
"
`;

exports[`static import (with relative paths) 1`] = `
"
import(\\"../../Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"../../Foo\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Foo' */
  \\"../../Foo\\"), _importCss(\\"Foo\\", {})]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \\"../../Foo\\"),
  resolve: () => require.resolveWeak(\\"../../Foo\\"),
  chunkName: () => \\"Foo\\"
});
"
`;

exports[`static import 1`] = `
"
import(\\"./Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

var _path = _interopRequireDefault(require(\\"path\\")).default;

var _importCss = _interopRequireDefault(require(\\"babel-plugin-universal-import/importCss\\")).default;

var _universalImport = _interopRequireDefault(require(\\"babel-plugin-universal-import/universalImport\\")).default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_universalImport({
  id: \\"./Foo\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import(
  /* webpackChunkName: 'Foo' */
  \\"./Foo\\"), _importCss(\\"Foo\\", {})]).then(proms => proms[0]),
  path: () => _path.join(__dirname, \\"./Foo\\"),
  resolve: () => require.resolveWeak(\\"./Foo\\"),
  chunkName: () => \\"Foo\\"
});
"
`;
